MyChat across app and assets
Updated application name, branding, and references from  to 'MyChat' throughout configuration files, UI components, and documentation. Modified feature flags to enable all features by default. Updated premium features configuration and replaced various logo and icon assets to reflect the new MyChat branding.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Chatwoot",
-  "description": "Chatwoot is a customer support tool for instant messaging channels",
+  "name": "Mychat",
+  "description": "Mychat is a customer support tool for instant messaging channels",
   "website": "https://www.mychat.ae/",
   "repository": "https://github.com/chatwoot/chatwoot",
   "logo": "https://app.mychat.ae/brand-assets/logo_thumbnail.svg",
