--- a/enterprise/config/premium_installation_config.yml
+++ b/enterprise/config/premium_installation_config.yml
@@ -1,6 +1,6 @@
 # ------- Branding Related Config ------- #
 - name: INSTALLATION_NAME
-  value: 'Chatwoot'
+  value: 'MyChat'
 - name: LOGO_THUMBNAIL
   value: '/brand-assets/logo_thumbnail.svg'
 - name: LOGO
@@ -12,7 +12,7 @@
 - name: WIDGET_BRAND_URL
   value: 'https://www.mychat.ae'
 - name: BRAND_NAME
-  value: 'Chatwoot'
+  value: 'MyChat'
 - name: TERMS_URL
   value: 'https://www.mychat.ae/terms-of-service'
 - name: PRIVACY_URL
